myteo/test/analyze/type_check/array/array_index_is_not_integer_error.exp
Error: Array index must be an integer but found `Bool`
test/analyze/type_check/array/array_index_is_not_integer_error.myte:4:4-8
 4 |   x[true];
   |     ^^^^

Error: Array index must be an integer but found `Unit`
test/analyze/type_check/array/array_index_is_not_integer_error.myte:5:4-6
 5 |   x[()];
   |     ^^

Error: Array index must be an integer but found `Array<Int>`
test/analyze/type_check/array/array_index_is_not_integer_error.myte:6:4
 6 |   x[x];
   |     ^