myteo/test/analyze/type_check/array/array_index_is_not_integer_error.myte
module test

fun indexIsNotIntegerError(x: Array<Int>) {
  x[true];
  x[()];
  x[x];
}

fun main() {}